First adaptation on home and header and gramatical

--- a/index.html
+++ b/index.html
@@ -7,31 +7,35 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="header-bg">
-        <div class="header">
-            <img src="./img/cedro-logo.svg" alt="identidade">
-            <nav>
-                <ul class="header-menu">
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#graduation">Graduation</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a class="customized-menu" href="../index.html">Customized</a></li>
-                </ul>
-            </nav>
+    
+    <div class="background-header-main">
+        <header class="header-bg">
+            <div class="header">
+                <img src="./img/cedro-logo.svg" alt="identidade">
+                <nav>
+                    <ul class="header-menu">
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#graduation">Graduation</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a class="customized-menu" href="./original-version/index.html">Original</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+            <main class="introduction">
+                <!--<img src='./img/perfil.jpg' alt="Identidade">-->
+                <!--<img src='./img/primarias/claud-richmond-f1vD0OewTc4-unsplash.jpg' alt="Identidade">-->
+                <div class="">
+                    <h1>Studying for be a<br>Front-End <br>Developer and <br>UI/UX Designer.</h1>
+                    <p>Localized on Álvares Machado 🐐</p>
+                </div>
+            </main>
         </div>
-    </header>
-    <main class="introduction">
-        <img src='./img/perfil.jpg' alt="Identidade">
-        <div class="">
-            <h1>Studying for be <br>Developer of <br>Front-End and <br>UI/UX Designer.</h1>
-            <p>Localized on Álvares Machado 🐐</p>
-        </div>
-    </main>
     <section class="experience" id="experience" area-label="Experience">
         <h2 class="subtitle">EXPERIENCE</h2>
         <div class="">
                 <p class="experience-text">I'm try to developer a little projects to study and training to prove to myself 
-                my habilits on english and skills like  <strong>HTML</strong>, <strong>CSS</strong> and <strong>JavaScript</strong>. 
+                my on english and skills like  <strong>HTML</strong>, <strong>CSS</strong> and <strong>JavaScript</strong>. 
                 This is my first web site developing <strong>Front-End</strong> and <strong>UI</strong>/<strong>UX</strong> Designer.</p>
             
             <div class="enterprises-work">
@@ -69,10 +73,10 @@
             <div class="enterprises-work">
                 <span class="enterprise-year">2021</span>
                 <h3 class="enterprise-title">Cubícula - Graduation Project</h3>
-                <span class="enterprise-title">Developed a sistem for financial system of a group of achtectures.</span>
-                <p class="enterprise-text">Devloper a simple and compelt software for control de financial system of a group of
-                    archtectures and urbanist peaple who whant control received money for client, 
-                    progress of projects and costs and expenses.
+                <span class="enterprise-title">Developed a financial system for a group of achtectures.</span>
+                <p class="enterprise-text">A simple software for control the financial system to a group of
+                    archtectures and urbanist who whant control received money for client, 
+                    progress of projects, costs and expenses.
                 </p>
                 <ul class="enterprise-skills">
                     <li>HTML</li>
@@ -89,8 +93,8 @@
             <h2 class="subtitle">GRADUATION</h2>
             <div>
                 <p class="graduation-text">
-                    I start my graduation on Cientist of Computation, but... that not exactly what I looking for, so... I move to 
-                    <strong>"</strong><span class="bsi-decoration">Sistemas de Informação</span><strong>"</strong>
+                    I start my graduation on Computer Science, but... that not exactly what I looking for, so... I move to 
+                    <strong></strong><span class="bsi-decoration">Information Systems</span><strong></strong>
                     and I whas graduated on that. Now I looking for a expecialization on <strong>Front-End</strong> whith focus on 
                     <strong>HTML</strong>/<strong>CSS</strong>, <strong>JavaScript</strong>, <strong>ReactJS</strong>, and <strong>UI</strong>/<strong>UX Designer</strong>. 
                 </p>
@@ -113,7 +117,7 @@
                 </ul>
                 <div class="extensive">
                     <div class="curso">
-                        <h3>Insetsive Courses</h3>
+                        <h3>Intensives Courses</h3>
                         <ul>
                             <li>
                                 UI/UX Desinger<span class="extensive-time">60h</span>
@@ -140,7 +144,7 @@
     </section>
     <footer class="footer" id="contact">
         <div class="footer-container">
-            <p class="footer-text">I'm avalieble for new projects and experiences, please use the follows links to send me questions 
+            <p class="footer-text">I'm open for new projects and experiences, please use the follows links to send me questions 
                 or propouses, I will enjoy yor contact. 👌</p>
             <ul class="footer-contact">
                 <li>pedro.furlan12@gmail.com</li>
