Ajuste de layout e mudanças na identidade visual

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
     <div class="background-header-main">
         <header class="header-bg">
             <div class="header">
-                <img src="./img/cedro-logo.svg" alt="identidade">
+                <img src="./img/cedro-logo-brown.svg" alt="identidade">
                 <nav>
                     <ul class="header-menu">
                         <li><a href="#experience">Experience</a></li>
@@ -25,12 +24,12 @@
             <main class="introduction">
                 <!--<img src='./img/perfil.jpg' alt="Identidade">-->
                 <!--<img src='./img/primarias/claud-richmond-f1vD0OewTc4-unsplash.jpg' alt="Identidade">-->
-                <div class="">
+                <div class="introduction-description">
                     <h1>Studying for be a<br>Front-End <br>Developer and <br>UI/UX Designer.</h1>
                     <p>Localized on Álvares Machado 🐐</p>
                 </div>
             </main>
-        </div>
+    </div>
     <section class="experience" id="experience" area-label="Experience">
         <h2 class="subtitle">EXPERIENCE</h2>
         <div class="">
@@ -90,7 +89,6 @@
     </section>
     <section class="graduation" id="graduation" aria-label="Graduation">
         <div class="graduation-container">
-            <h2 class="subtitle">GRADUATION</h2>
             <div>
                 <p class="graduation-text">
                     I start my graduation on Computer Science, but... that not exactly what I looking for, so... I move to 
@@ -139,7 +137,9 @@
                         </ul>
                     </div>
                 </div>
+                
             </div>
+            <h2 class="subtitle">GRADUATION</h2>
         </div>
     </section>
     <footer class="footer" id="contact">
