Corrigido barra de digitação e opacidade e adicionado o blink

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!--<img src='./img/perfil.jpg' alt="Identidade">-->
                 <!--<img src='./img/primarias/claud-richmond-f1vD0OewTc4-unsplash.jpg' alt="Identidade">-->
                 <div class="introduction-description">
-                    <h1>Studying for be a<br>Front-End <br>Developer and <br>UI/UX Designer</h1><div class="dot"></div>
+                    <h1>Studying for be a<br>Front-End <br>Developer and <br>UI/UX Designer.<span class="dot"></span></h1>
                     <p>Localized on Álvares Machado 🐐</p>
                 </div>
             </main>
