Fontes e footer ajustados

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!--<img src='./img/perfil.jpg' alt="Identidade">-->
                 <!--<img src='./img/primarias/claud-richmond-f1vD0OewTc4-unsplash.jpg' alt="Identidade">-->
                 <div class="introduction-description">
-                    <h1>Studying for be a<br>Front-End <br>Developer and <br>UI/UX Designer.<span class="dot"></span></h1>
+                    <h1>Studying for be a<br><b>Front-End</b> <br>Developer and <br>UI/UX Designer.<span class="dot"></span></h1>
                     <p>Localized on Álvares Machado 🐐</p>
                 </div>
             </main>
@@ -100,7 +100,7 @@
                 <ul class="colege-list">
                     <li class="colege">
                         <span class="colege-type">Bacharel</span> 
-                        <h3 class="colege-title">Sistemas de Informação</h3>
+                        <h3 class="colege-title">Information Systems</h3>
                         <span class="colege-name">Unoeste</span>
                     </li>
                     <li class="colege">
@@ -150,9 +150,9 @@
             <ul class="footer-contact">
                 <li>pedro.furlan12@gmail.com</li>
                 <li>+55 (18) 99660-2505</li>
-                <li><a href="http://">@p.furl</a></li>
+                <li><a href="https://github.com/pedrofurlan">@pedrofurlan</a></li>
             </ul>
-            <p class="copyright">© Cedro. Alguns direitos reservados.</p>
+            <p class="copyright">© Cedro. Some rights reserved.</p>
         </div>
     </footer>
 </body>
