Resize background, adição do botao voltar ao topo e mudança na fonte

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    
     <div class="background-header-main">
         <header class="header-bg">
             <div class="header">
@@ -156,4 +157,6 @@
         </div>
     </footer>
 </body>
+
+<a href="#" class="to-top"></a>
 </html>
