Tentativa de grid footer a ajustar graduation

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
     </section>
     <section class="graduation" id="graduation" aria-label="Graduation">
         <div class="graduation-container">
-            <div>
+            
+            <h2 class="subtitle">GRADUATION</h2>
+            <div class="pull-graduation">
                 <p class="graduation-text">
                     I start my graduation on Computer Science, but... that not exactly what I looking for, so... I move to 
                     <strong></strong><span class="bsi-decoration">Information Systems</span><strong></strong>
@@ -141,13 +143,13 @@
                 </div>
                 
             </div>
-            <h2 class="subtitle">GRADUATION</h2>
         </div>
     </section>
     <footer class="footer" id="contact">
         <div class="footer-container">
             <p class="footer-text">I'm open for new projects and experiences, please use the follows links to send me questions 
                 or propouses, I will enjoy yor contact. 👌</p>
+            <img class="profile-footer" src="./img/primarias/bode_perfil-redmensionada.jpg">
             <ul class="footer-contact">
                 <li>pedro.furlan12@gmail.com</li>
                 <li>+55 (18) 99660-2505</li>
