--- a/original-version/index.html
+++ b/original-version/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header-bg">
         <div class="header">
-            <img src="./img/cedro-logo.svg" alt="identidade">
+            <img src="./img/marca.svg" alt="identidade">
             <nav>
                 <ul class="header-menu">
                     <li><a href="#experience">Experience</a></li>
