--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!--<img src='./img/perfil.jpg' alt="Identidade">-->
                 <!--<img src='./img/primarias/claud-richmond-f1vD0OewTc4-unsplash.jpg' alt="Identidade">-->
                 <div class="introduction-description">
-                    <h1>Studying for be a<br><b>Front-End</b> <br>Developer and <br>UI/UX Designer.<span class="dot"></span></h1>
+                    <h1>Studying to be a<br><b>Front-End</b> <br>Developer and <br>UI/UX Designer.<span class="dot"></span></h1>
                     <p>Localized on Álvares Machado 🐐</p>
                 </div>
             </main>
@@ -35,16 +35,16 @@
     <section class="experience" id="experience" area-label="Experience">
         <h2 class="subtitle">EXPERIENCE</h2>
         <div class="">
-                <p class="experience-text">I'm try to developer a little projects to study and training to prove to myself 
-                my on english and skills like  <strong>HTML</strong>, <strong>CSS</strong> and <strong>JavaScript</strong>. 
-                This is my first web site developing <strong>Front-End</strong> and <strong>UI</strong>/<strong>UX</strong> Designer.</p>
+                <p class="experience-text">I'm trying to develop a few projects to study and train to prove to myself my English and skills like
+                <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong>. 
+                This is my first website developing <strong>Front-End</strong> and <strong>UI</strong>/<strong>UX</strong> Designer.</p>
             
             <div class="enterprises-work">
                 <span class="enterprise-year">2017</span>
                 <h3 class="enterprise-title">U.B.S. Centro AVM - Trainee</h3>
-                <span class="enterprise-title">Boy who was called by 'Severino' of I.T.</span>
-                <p class="enterprise-text">On this job, I was the dude who is do what ever comes in mind of people and 
-                    conveins to they to call the I.T. guy.</p>
+                <span class="enterprise-title">A boy who was called 'Severino' of I.T.</span>
+                <p class="enterprise-text">In this job, I was the dude who is do whatever came to mind of people and was convenient 
+                for them to call the I.T. guy.</p>
                 <ul class="enterprise-skills">
                     <li>Printers Tamer</li>
                     <li>Excel/Word 'Whitcher'</li>
@@ -59,10 +59,10 @@
             <div class="enterprises-work">
                 <span class="enterprise-year">2018</span>
                 <h3 class="enterprise-title">Com. Ind. Matsuda - Employed</h3>
-                <span class="enterprise-title">Developer a sistem for Solar Energy.</span>
-                <p class="enterprise-text">On that, is not too diferent of last one, but this is on "my area" of
-                    experience. I have developer a software whith <a href="https://github.com/lpepinelli" target="_blank">@lpepinelli</a> for make or simulate proposals and budgets for 
-                    clients who want to buy fotovoltaic energy generators.</p>
+                <span class="enterprise-title">Developed a system for Solar Energy.</span>
+                <p class="enterprise-text">That is not too different from the last one, but this is "my area" of
+                    experience. I have developed software with <a href="https://github.com/lpepinelli" target="_blank">@lpepinelli</a> to make or simulate proposals and budgets for 
+                    clients who want to buy photovoltaic energy generators.</p>
                 <ul class="enterprise-skills">
                     <li>HTML</li>
                     <li>CSS</li>
@@ -74,10 +74,10 @@
             <div class="enterprises-work">
                 <span class="enterprise-year">2021</span>
                 <h3 class="enterprise-title">Cubícula - Graduation Project</h3>
-                <span class="enterprise-title">Developed a financial system for a group of achtectures.</span>
-                <p class="enterprise-text">A simple software for control the financial system to a group of
-                    archtectures and urbanist who whant control received money for client, 
-                    progress of projects, costs and expenses.
+                <span class="enterprise-title">Developed a financial system for a group of architectures.</span>
+                <p class="enterprise-text">Simple software for controlling the financial system of a group of
+                    architectures and urbanists who want control received money from a client, 
+                    progress of projects, costs, and expenses.
                 </p>
                 <ul class="enterprise-skills">
                     <li>HTML</li>
@@ -94,9 +94,9 @@
             <h2 class="subtitle800">GRADUATION</h2>
             <div class="pull-graduation">
                 <p class="graduation-text">
-                    I start my graduation on Computer Science, but... that not exactly what I looking for, so... I move to 
+                    I start my graduation in Computer Science, but... that is not exactly what I looking for, so... I move to 
                     <strong></strong><span class="bsi-decoration">Information Systems</span><strong></strong>
-                    and I whas graduated on that. Now I looking for a expecialization on <strong>Front-End</strong> whith focus on 
+                    and I graduated on that. Now I looking for an specialization on <strong>Front-End</strong> with focus on 
                     <strong>HTML</strong>/<strong>CSS</strong>, <strong>JavaScript</strong>, <strong>ReactJS</strong>, and <strong>UI</strong>/<strong>UX Designer</strong>. 
                 </p>
                 <ul class="colege-list">
@@ -147,8 +147,8 @@
     </section>
     <footer class="footer" id="contact">
         <div class="footer-container">
-            <p class="footer-text">I'm open for new projects and experiences, please use the follows links to send me questions 
-                or propouses, I will enjoy yor contact. 👌</p>
+            <p class="footer-text">I'm open to new projects and experiences, please use the following links to send me questions,
+            I will enjoy your contact.  👌</p>
             <div class="footer-contact">
                 <img class="profile-footer" src="./img/primarias/bode_perfil-redmensionada.jpg">
                 <ul class="footer-lista">
